setting margin to avoid content from jumping vertically when there is no scrollbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -241,7 +241,7 @@ body {
   min-height: 100%;
   height: auto !important;
   height: 100%;
-  margin: 0 auto -50px;
+  margin: 10px auto -50px;
 }
 
 #container {
